# jaffle_shop

./: .gitignore  .sqlfluff  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
data/: raw_payments.csv  schema.yml
edr_target/: elementary_output.json  elementary_report.html
etc/db_setup/: docker-compose.yml
macros/schema_tests/: test_unique_snowflake.sql
models/: docs.md
models/mart/bus/: int_payments__pivoted.sql
models/mart/core/: customers.sql  schema.yml
models/raw/: src_jaffle_shop.yml
models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
tests/: warning_found_michaels.sql
