[tool.poetry]
name = "jaffle-shop"
version = "0.1.0"
description = ""
authors = ["jayjiang <jayjiang@deloitte.com.au>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.8"
dbt-databricks = "^1.8.7"
elementary-data = {extras = ["databricks"], version = "^0.16.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
